Fix sticky sidebar by changing html and body overflow-x to clip instead of hidden

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--bg-base);
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
@@ -88,7 +88,7 @@ body {
   min-height: 100dvh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 
